--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -3,6 +3,8 @@ layout: page
 type: article
 ---
 
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+
 {%- include snippets/assign.html
   target = site.data.variables.default.page.sharing
   source0=layout.sharing source1=page.sharing -%}
