--- a/_sass/components/_author-links.scss
+++ b/_sass/components/_author-links.scss
@@ -38,6 +38,12 @@
       .npm-button {
         @include clickable($text-color-1, $npm-color);
       }
+      .bili-button {
+        @include clickable($text-color-1, $bili-color);
+      }
+      .red-button {
+        @include clickable($text-color-1, $red-color);
+      }
     }
   }
 }
