--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -71,7 +71,8 @@
     "layout/404",
 
     "custom",
+    "donate",
 
-    "definition",
-    "proposition"
+    "math/definition",
+    "math/proposition"
 ;
