--- a/_sass/skins/_forest.scss
+++ b/_sass/skins/_forest.scss
@@ -69,6 +69,8 @@ $douban-color:     #42bd56;
 $linkedin-color:   #1074af;
 $github-color:     #000;
 $npm-color:        #fff;
+$bili-color:       #EC5D85;
+$red-color:        #E82429;
 
 // highlight colors
 @import "skins/highlight/tomorrow";
