--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,8 +28,14 @@
             {%- include snippets/get-nav-url.html path=page.url -%}
             {%- assign _page_url = __return -%}
             {%- include snippets/get-string-from-locale-config.html locale=_item.titles -%}
+            {%- if _item.icon %}{% include svg/icon/navigation/{{ _item.icon }}.svg %}{%- endif -%}
+            &nbsp;
             {%- if _nav_url == _page_url or page.nav_key and _item.key and page.nav_key == _item.key -%}
-              <li class="navigation__item navigation__item--active"><a href="{{ _nav_url }}">{%- if _item.title -%}{{ _item.title }}{%- else -%}{{ __return }}{%- endif -%}</a></li>
+              <li class="navigation__item navigation__item--active">
+                <a href="{{ _nav_url }}">
+                  {%- if _item.title -%}{{ _item.title }}{%- else -%}{{ __return }}{%- endif -%}
+                </a>
+              </li>
             {%- else -%}
               <li class="navigation__item"><a href="{{ _nav_url }}">{%- if _item.title -%}{{ _item.title }}{%- else -%}{{ __return }}{%- endif -%}</a></li>
             {%- endif -%}
