--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -130,6 +130,6 @@
   }
 }
 .navigation svg {
-  width: 24px; /* 或者你希望的大小 */
-  height: 24px; /* 或者你希望的大小 */
+  width: 1.5rem; /* 或者你希望的大小 */
+  height: 1.5rem; /* 或者你希望的大小 */
 }
