--- a/_sass/common/components/_button.scss
+++ b/_sass/common/components/_button.scss
@@ -20,6 +20,12 @@
   height: 1.6rem !important;
 }
 
+.bili-button .icon {
+  width: 1.3rem !important;
+  height: 1.3rem !important;
+  margin-left: 0.2px;
+}
+
 .button {
   @include button();
 }
