--- a/_includes/sharing-providers/custom.html
+++ b/_includes/sharing-providers/custom.html
@@ -1,3 +1,25 @@
 <!-- start custom sharing snippet -->
 
+<div class="share-section">
+    <span label="share-label">分享到：</span>
+    <div class="share-buttons"></div>
+    <!-- QQ 空间分享按钮 -->
+    <a class="share-qqzone" href="https://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{ page.url | relative_url }}&title={{ page.title }}" target="_blank" title="分享到QQ空间">
+        <img src="/assets/images/icon/qqz.svg" width="32px" height="32px" alt="QQ空间">
+    </a>
+
+    <!-- 微信分享按钮（使用二维码分享方式） -->
+    <a class="share-wechat" href="javascript:void(0);" title="分享到微信">
+        <img src="assets/images/icon/wechat.svg"  width="32px" height="32px" alt="微信">
+    </a>
+    <div class="wechat-qrcode" style="display:none;">
+        <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data={{ page.url | absolute_url }}" alt="微信二维码">
+    </div>
+
+    <!-- 微博分享按钮 -->
+    <a class="share-weibo" href="https://service.weibo.com/share/share.php?url={{ page.url | absolute_url }}&title={{ page.title }}" target="_blank" title="分享到微博">
+        <img src="/assets/images/icon/weibo.svg"  width="32px" height="32px" alt="微博">
+    </a>
+</div>
+  
 <!-- end custom sharing snippet -->
