update share url

--- a/_includes/sharing-providers/custom.html
+++ b/_includes/sharing-providers/custom.html
@@ -4,7 +4,7 @@
     <span label="share-label">分享到：</span>
     <div class="share-buttons"></div>
     <!-- QQ 空间分享按钮 -->
-    <a class="share-qqzone" href="https://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{ page.url | relative_url }}&title={{ page.title }}" target="_blank" title="分享到QQ空间">
+    <a class="share-qqzone" href="https://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{ page.url | absolute_url }}&title={{ page.title }}" target="_blank" title="分享到QQ空间">
         <img src="/assets/images/icon/qqz.svg" width="32px" height="32px" alt="QQ空间">
     </a>
 
