--- a/_sass/sharing.scss
+++ b/_sass/sharing.scss
@@ -12,9 +12,8 @@
 
 .share-buttons {
     display: flex;
-    gap: 15px; /* 调整按钮之间的间距 */
+    gap: 15px !important; /* 调整按钮之间的间距 */
     align-items: center;
-    position: relative; /* 使二维码相对于按钮容器进行绝对定位 */
 }
 
 .share-buttons a {
@@ -26,18 +25,30 @@
 .share-section .share-buttons img {
     width: 32px !important;
     height: 32px !important;
+    max-width: 100%;
 }
+
 
 .wechat-qrcode {
-    position: absolute;
-    margin-top: 5px;
-    padding: 5px;
+    display: none; /* 默认隐藏二维码 */
+    position: absolute; /* 绝对定位 */
+    top: 50px; /* 控制二维码相对于图标的垂直位置 */
+    left: -40px; /* 控制二维码相对于图标的水平位置 */
+    padding: 10px;
     border: 1px solid #ddd;
     background: #fff;
+    z-index: 100; /* 确保二维码位于图标上方 */
 }
 
+.share-wechat-container {
+    position: relative; /* 使二维码的定位基于此容器 */
+}
 
-/* 隐藏二维码时，确保提示文字正常显示 */
-.share-wechat:hover + .wechat-qrcode {
+.share-wechat {
+    display: inline-block;
+    position: relative;
+}
+
+.share-wechat-container:hover .wechat-qrcode {
     display: block;
 }
