--- a/_includes/scripts/variables.html
+++ b/_includes/scripts/variables.html
@@ -18,6 +18,7 @@
           css: '{{ _sources.gitalk.css }}'
         },
         valine: '{{ _sources.valine }}',
+        katex: '{{ _sources.katex }}',
         mathjax: '{{ _sources.mathjax }}',
         mermaid: '{{ _sources.mermaid }}'
       },
