--- a/_includes/pageview-providers/leancloud/post.html
+++ b/_includes/pageview-providers/leancloud/post.html
@@ -6,26 +6,27 @@
 {%- assign _LEANCLOUD_APP_CLASS = site.pageview.leancloud.app_class -%}
 
 {%- if page.key and
-  _LEANCLOUD_APP_ID and
-  _LEANCLOUD_APP_KEY and
-  _LEANCLOUD_APP_CLASS -%}
+_LEANCLOUD_APP_ID and
+_LEANCLOUD_APP_KEY and
+_LEANCLOUD_APP_CLASS -%}
 
-  <script>
-    {%- include pageview-providers/leancloud/leancloud.js -%}
-  </script>
-  <script>
-    window.Lazyload.js(['{{ _sources.jquery }}', '{{ _sources.leancloud_js_sdk}}'], function() {
-      var pageview = window.pageview(AV, {
-        appId:    '{{ _LEANCLOUD_APP_ID }}',
-        appKey:   '{{ _LEANCLOUD_APP_KEY }}',
-        appClass: '{{ _LEANCLOUD_APP_CLASS }}'
-      });
-      var key =   '{{ page.key }}';
-      var title = {{ page.title | jsonify }};
-      pageview.increase(key, title, function(view) {
-        $("[data-page-key='{{ page.key }}']").text(view);
-      });
+<script>
+  {% - include pageview - providers / leancloud / leancloud.js -%}
+</script>
+<script>
+  window.Lazyload.js(['{{ _sources.jquery }}', '{{ _sources.leancloud_js_sdk}}'], function () {
+    var pageview = window.pageview(AV, {
+      appId: '{{ _LEANCLOUD_APP_ID }}',
+      appKey: '{{ _LEANCLOUD_APP_KEY }}',
+      appClass: '{{ _LEANCLOUD_APP_CLASS }}'
     });
-  </script>
+    var key = '{{ page.key }}';
+    var title = {{ page.title | jsonify
+  }};
+  pageview.increase(key, title, function (view) {
+    $("[data-page-key='{{ page.key }}']").text(view);
+  });
+    });
+</script>
 
 {%- endif -%}
