--- a/_includes/proposition.html
+++ b/_includes/proposition.html
@@ -1,8 +1,6 @@
 <div class="proposition-box">
-    <div class="proposition-title">
-      命题 {{ include.number }}：{{ include.title }}
-    </div>
-    <div class="proposition-content">
-      {{ include.content }}
-    </div>
+  <div class="proposition-title">
+    命题 {{ include.number }}：{{ include.title }}
   </div>
+  <div class="proposition-content">{{ include.content }}</div>
+</div>
