--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -27,4 +27,5 @@ type: article
 <script>
   {%- include scripts/article.js -%}
   {%- include scripts/wechat-share.js -%}
+  {%- include scripts/download.js -%}
 </script>
