--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -55,6 +55,9 @@
     "components/lightbox",
     "components/extensions",
 
+    "addon/commons",
+    "addon/module",
+    "addon/colors",
 
     "additional/alert",
     "additional/tag",
