--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
       <div>
         {%- include snippets/get-locale-string.html key='COPYRIGHT_DATES' -%}
         {%- assign _locale_copyright_dates = __return -%}
-        Copyright © {{ site.time | date: '%Y' }}-{{ _locale_copyright_dates }} {{ site.title }}.
+        Copyright © {{ _locale_copyright_dates }}-{{ site.time | date: '%Y' }} {{ site.title }}.
         Powered by <a title="Jekyll is a simple, blog-aware, static site generator." href="http://jekyllrb.com/" target="_blank">Jekyll</a> & <a
         title="TeXt is a super customizable Jekyll theme." href="https://github.com/kitian616/jekyll-TeXt-theme" target="_blank">TeXt Theme</a>.
       </div>
