--- a/_sass/addon/colors.scss
+++ b/_sass/addon/colors.scss
@@ -9,6 +9,9 @@
     --prompt-danger-bg: rgb(248, 215, 218, 0.56);
     --prompt-danger-icon-color: #df3c30;
 
+    --language-border-color: #ececec;
+    --text-color: #34343c;
+
     [class^='prompt-'] {
         --link-underline-color: rgb(219, 216, 216);
     }
