--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -11,6 +11,8 @@ blockquote {
     }
 
     &[class^='prompt-'] {
+        font-size: 1rem;
+        line-height: 1.4rem; // 设置与图标相近的行高
         border-left: 0;
         position: relative;
         padding: 1rem 1rem 1rem 3rem;
@@ -50,5 +52,140 @@ blockquote {
     #avatar {
         width: 5rem;
         height: 5rem;
+    }
+}
+
+.box-info {
+    @include colorbox(var(--prompt-info-icon-color),
+        var(--prompt-info-icon-color),
+        "\f06a",
+        var(--prompt-info-bg));
+}
+
+/* box-tip 绿色 */
+.box-tip {
+    @include colorbox(var(--prompt-tip-icon-color),
+        var(--prompt-tip-icon-color),
+        "\f0eb",
+        var(--prompt-tip-bg),
+        'regular'
+    );
+}
+
+/* box-warning 黄色 */
+.box-warning {
+    @include colorbox(var(--prompt-warning-icon-color),
+        var(--prompt-warning-icon-color),
+        "\f06a",
+        var(--prompt-warning-bg));
+}
+
+/* box-danger 红色 */
+.box-danger {
+    @include colorbox(var(--prompt-danger-icon-color),
+        var(--prompt-danger-icon-color),
+        "\f071",
+        var(--prompt-danger-bg));
+}
+
+details {
+    border-radius: .25rem;
+    box-shadow: var(--language-border-color) 1px 1px 2px 1px; //借用了代码框的边框颜色变量
+    font-family: "Georgia", serif;
+    margin-bottom: 1rem;
+    padding: .6rem 1rem .6rem 1.5rem;
+
+    >p:last-child {
+        margin-bottom: 0;
+    }
+
+    >summary {
+        padding: .5rem 1.0rem .5rem 1.0rem;
+        margin: -.6rem -1rem -.6rem -1.5rem;
+        font-weight: 600;
+        text-decoration: underline;
+        position: relative;
+        list-style: none; //隐藏默认的箭头
+        transition: background-color 0.3s ease; //添加颜色过渡效果
+        text-decoration: none; //去除下划线
+    }
+}
+
+details>summary::-webkit-details-marker {
+    display: none; //隐藏默认的箭头
+}
+
+details>summary::marker {
+    content: none; //隐藏默认的箭头
+}
+
+details>summary::before {
+    /* 关闭状态下 */
+    /* 也可以用其他符号或自定义图标，比如 Unicode 字符 */
+    // content: '🙈'; 
+    // content:'\002B9A';
+    margin-right: .5rem;
+    display: inline-block;
+}
+
+details[open]>summary::before {
+    /* 展开状态下 */
+    // content: '🐵';
+    // content: '\002B9B';
+    animation: my-cat .2s ease-in-out; //点击会有动画效果
+    margin-right: .5rem;
+}
+
+details>summary::after {
+    font-family: 'Font Awesome 6 Free';
+    content: "\f105"; //Unicode for fa-angle-down
+    display: inline-block;
+    transition: transform 0.2s ease; //添加旋转动画
+    position: absolute;
+    right: 1rem; //调整箭头在最右边的位置
+}
+
+details[open]>summary::after {
+    transform: rotate(90deg);
+}
+
+details[open]>summary {
+    // transition: margin 200ms ease-out;
+    margin-bottom: .6rem; // 展开会有动画效果
+}
+
+/* 动画效果代码 */
+@keyframes my-cat {
+    50% {
+        transform: scale(1.3);
+    }
+}
+
+.details-definition {
+    border-left: .2rem solid var(--prompt-tip-icon-color);
+
+    >summary {
+        background-color: var(--prompt-tip-bg);
+        color: var(--prompt-tip-icon-color);
+    }
+}
+
+.details-theorem {
+    border-left: .2rem solid var(--prompt-warning-icon-color);
+
+    
+    >summary {
+        background-color: var(--prompt-warning-bg);
+        color: var(--prompt-warning-icon-color);
+    }
+}
+
+.details-proposition {
+    border-left: .2rem solid var(--prompt-info-icon-color);
+
+    
+    >summary {
+        background-color: var(--prompt-info-bg);
+        color: var(--prompt-info-icon-color);
     }
 }
