--- a/_includes/article/footer/license.html
+++ b/_includes/article/footer/license.html
@@ -3,13 +3,10 @@
 
 {%- if include.license -%}
 
-{%-assign _license_name = '<a itemprop="license" rel="license" href="[URL]">[NAME]</a>' | replace: "[URL]",
+{%-assign _license_name = '<a itemprop="license" rel="license" href="[URL]" target="_blank">[NAME]</a>' | replace: "[URL]",
 include.license.url | replace: "[NAME]", include.license.name -%}
 <div class="license">
   <p>{{ _license_announce | replace: "[LICENSE]", _license_name }}
-    <a rel="license" href="{{ include.license.url }}">
-      <img alt="{{ include.license.name }}" src="{{ include.license.image }}" />
-    </a>
   </p>
 </div>
 {%- endif -%}
