--- a/_includes/comments-providers/gitalk.html
+++ b/_includes/comments-providers/gitalk.html
@@ -23,7 +23,7 @@ site.comments.gitalk.owner and site.comments.gitalk.admin -%}
 			clientSecret: '{{ site.comments.gitalk.clientSecret }}',
 			repo: '{{ site.comments.gitalk.repository }}',
 			owner: '{{ site.comments.gitalk.owner }}',
-			admin: [{ _admin }],
+			admin: ['{{ _admin }}'],
 			id: '{{ page.key }}',
 			distractionFreeMode: false
    	});
