--- a/_includes/article/footer/license.html
+++ b/_includes/article/footer/license.html
@@ -2,11 +2,8 @@
 {%- assign _license_announce = __return -%}
 
 {%- if include.license -%}
-
-{%-assign _license_name = '<a itemprop="license" rel="license" href="[URL]" target="_blank">[NAME]</a>' | replace: "[URL]",
-include.license.url | replace: "[NAME]", include.license.name -%}
-<div class="license">
-  <p>{{ _license_announce | replace: "[LICENSE]", _license_name }}
-  </p>
-</div>
+  {%- assign _license_name = '<a itemprop="license" rel="license" href="[URL]" target="_blank">[NAME]</a>' | replace: "[URL]", include.license.url | replace: "[NAME]", include.license.name -%}
+  <div class="license">
+    <p>{{ _license_announce | replace: "[LICENSE]", _license_name }}</p>
+  </div>
 {%- endif -%}
