--- a/_includes/article/top/custom.html
+++ b/_includes/article/top/custom.html
@@ -1,3 +1,5 @@
 <!-- start custom article top snippet -->
 
+<!-- 按理来说，pdf下载功能和视频功能应当放在这部分，但是考虑到美观性，故放在了分享功能部分 -->
+
 <!-- end custom article top snippet -->
