--- a/_includes/sharing-providers/custom.html
+++ b/_includes/sharing-providers/custom.html
@@ -1,7 +1,6 @@
 <!-- start custom sharing snippet -->
 
-<div class="post-options" style="display: flex; align-items: flex-start;">
-
+<div class="post-options">
   <!-- 分享功能 -->
   <div class="share-section">
     <span label="share-label">分享到：</span>
@@ -9,13 +8,13 @@
     <div class="share-buttons">
       <!-- QQ 空间分享按钮 -->
       <a class="share-qqzone" href="https://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url={{ page.url | absolute_url }}&title={{ page.title }}" target="_blank" title="分享到QQ空间">
-        <img src="/assets/images/icon/qqzone.svg" width="32px" height="32px" alt="QQ空间" />
+        <img src="/assets/images/icon/qqzone.svg" alt="QQ空间" />
       </a>
 
       <!-- 微信分享按钮（使用二维码分享方式） -->
       <div class="share-wechat-container">
         <a class="share-wechat" href="javascript:void(0);" title="分享到微信">
-          <img src="assets/images/icon/wechat.svg" width="32px" height="32px" alt="微信" />
+          <img src="assets/images/icon/wechat.svg" alt="微信" />
         </a>
         <div class="wechat-qrcode">
           <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data={{ page.url | absolute_url }}" alt="微信二维码" />
@@ -24,18 +23,30 @@
 
       <!-- 微博分享按钮 -->
       <a class="share-weibo" href="https://service.weibo.com/share/share.php?url={{ page.url | absolute_url }}&title={{ page.title }}" target="_blank" title="分享到微博">
-        <img src="/assets/images/icon/weibo.svg" width="32px" height="32px" alt="微博" />
+        <img src="/assets/images/icon/weibo.svg" alt="微博" />
       </a>
     </div>
   </div>
 
-  <!-- PDF 下载功能 -->
-  <div class="pdf-download-section">
-    <a href="https://www.alipan.com/s/ZsWqn6uAr91" target="_blank" class="pdf-download">
-      <img src="/assets/images/icon/download.svg" alt="Download PDF" style="width: 32px; margin-right: 5px;" />
-      <span style="color: red;">下载 PDF 版</span>
-    </a>
-  </div>
+  {%- if page.download -%}
+    <!-- PDF 下载功能 -->
+    <div class="multimedia">
+      <a href="https://www.alipan.com/s/ZsWqn6uAr91" target="_blank" class="multimedia-link">
+        <img src="/assets/images/icon/download.svg" alt="Download PDF" />
+        <span>下载 PDF 版</span>
+      </a>
+    </div>
+  {%- endif -%}
+
+  {%- if page.videos -%}
+    <!-- 视频功能 -->
+    <div class="multimedia">
+      <a href="https://space.bilibili.com/10738871" target="_blank" class="multimedia-link">
+        <img src="/assets/images/icon/video.svg" alt="video" />
+        <span>观看视频</span>
+      </a>
+    </div>
+  {%- endif -%}
 </div>
 
 <!-- end custom sharing snippet -->
