--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -3,10 +3,27 @@ layout: page
 title: 404
 show_title: false
 ---
-<div class="layout--404">
-  <div class="sign">
-    <h1>404</h1>
-    <p>Page not found :(</p>
+<div style="display: flex; align-items: center; justify-content: center;">
+  <!-- 左侧内容 -->
+  <div class="container">
+    <div style="display: flex; align-items: center; gap: 10px; margin-bottom: 10px;">
+      <img src="assets/images/icon/dangerous.svg" alt="dangerous" style="width: 50px; height: 50px;" />
+        <h1>Oops! </h1>
+    </div>
+    <p><strong>Error code: 404</strong></p>
+    <p>看起来您访问的内容不存在，请检查您输入的地址是否正确。</p>
+    <p>您可以 <a href="/">返回首页</a> 或 <a href="archive.html"> 查看文章列表</a>。</p>
+    <div>
+        <a href="/" style="text-decoration: none; color: #007bff; font-size: 16px;">返回首页</a> |
+        <a href="archive.html" style="text-decoration: none; color: #007bff; font-size: 16px;">查看文章列表</a>
+    </div>
+  </div>
+  
+  <!-- 右侧图片 -->
+  <div style="margin-left: 50px;">
+    <div style="width: 300px; height: 200px; border: 2px solid #ddd; display: flex; align-items: center; justify-content: center; margin-left: 20px; color: #aaa; font-size: 1.2em;">
+      图片区域
+    </div>
   </div>
 </div>
 
